--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,36 @@ body {
     padding: 12px;
     color:#fff;
     background-color: #000;
-    border-radius: 10%;
+    text-align: center;
+    border-radius: 5%;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
     
+}
+
+.tarjeta button:hover {
+    opacity: 0.5;
+}
+
+/* estilos del modal  */
+
+modal-container {
+    width: 80%;
+    margin: 0 10%;
+    max-height: 88vh;
+    color: #fff;
+    background-color: #828282;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    overflow: auto;
+    z-index: 9;
+    top: 12vh;
+    scrollbar-color: none;
+}
+
+.modal-header-title {
+    justi
 }
