--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body {
 
 /* estilos del modal  */
 
-modal-container {
+.modal-container {
     width: 80%;
     margin: 0 10%;
     max-height: 88vh;
@@ -115,6 +115,45 @@ modal-container {
     scrollbar-color: none;
 }
 
+.modal-container::-webkit-scrollbar {
+    display: none;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-around;
+    background-color: #000;
+    color: #fff;
+    width: 100%;
+}
+
+
 .modal-header-title {
-    justi
+    justify-self: start;
+
+}
+
+.modal-header-button {
+    cursor: pointer;
+}
+
+.modal-container > .modal-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 70%;
+    margin: 10px;
+}
+
+.modal-container > div > img {
+    height: 120px;
+    width: 120px;
+}
+
+.total-content {
+    font-size: 25px;
+    padding: 20px;
+    text-align: center;
+    padding-top:  20px;
 }
