--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ body {
     width: 80%;
     margin: 0 10%;
     max-height: 88vh;
-    color: #fff;
+    color: #000;
     background-color: #828282;
     display: flex;
     flex-direction: column;
