--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
     margin-right: 20px;
     margin-bottom: 4.5vh;
     cursor: pointer;
+    color: #fff;
 }
 
 /* estilo de banner */
@@ -163,4 +164,10 @@ body {
     padding: 20px;
     text-align: center;
     padding-top:  20px;
+}
+
+/* eliminar productos */
+
+.borrar-producto {
+    cursor: pointer;
 }
