--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
 
 .seccion-shop {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 30px;
     margin-left: 80px;
@@ -72,7 +72,7 @@ body {
 
 .tarjeta>img {
     width: 90%;
-    height: 250px;
+    height: 230px;
 }
 
 .precio {
@@ -99,6 +99,7 @@ body {
 .tarjeta button:hover {
     opacity: 0.5;
 }
+
 
 /* estilos del modal  */
 
@@ -216,3 +217,4 @@ body {
     font-weight: bold;
 
 }
+
