--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,8 @@ body {
 
 /* estilos del modal  */
 
+
+
 .modal-container {
     display: flex;
     width: 80%;
@@ -158,7 +160,7 @@ body {
     width: 120px;
 }
 
-.precioModal {
+ .precioModal {
     font-size: 25px;
     padding: 10px;
     text-align: center;
@@ -177,8 +179,83 @@ body {
     padding: 20px;
     text-align: center;
     padding-top: 20px;
-}
+} 
 
+
+@media only screen and (max-width: 750px) {
+    
+    .modal-container {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+      margin: 0;
+      min-height: 88vh;
+    }
+  
+    .modal-container > .modal-content {
+      justify-content: space-between;
+      width: 100%;
+      margin: 2px;
+    }
+
+  
+    .modal-container > div > img {
+      height: 80px;
+      width: 80px;
+    }
+
+    .modalNombre{
+        display: none;
+    }
+  }
+  
+  @media only screen and (max-width: 360px) {
+    
+
+    .tarjeta {
+        box-shadow: 0 4px 8 px 0 rgba(0, 0, 0, 0.5);
+        max-width: 300px;
+        padding: 20px;
+        margin: auto;
+        text-align: center;
+        font-family: arial;
+    }
+    
+    .tarjeta>h3 {
+        font-size: 20px;
+        font-weight: bold;
+    }
+    
+    .tarjeta>img {
+        width: 90%;
+        height: 230px;
+    }
+    
+    .modal-container {
+      display: flex;
+      flex-wrap: wrap;   
+      width: 100%;
+      margin: 0;
+      min-height: 88vh; 
+    }
+  
+    .modal-container > .modal-content {
+      justify-content: space-between;
+      width: 100%;
+      margin: 2px;
+    }
+
+  
+    .modal-container > div > img {
+      height: 80px;
+      width: 80px;
+    }
+
+    .modalNombre{
+        display: none;
+    }
+  }
+  
 /* eliminar productos */
 
 .borrar-producto {
